removed images and added text to project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -12,10 +12,24 @@ layout: default
 <h1>Projects</h1>
 
 <p>
-The majority of my physical projects such as my robot arms, quadropod and 3d printer involve arduinos. If you are interested in these 
-then <a href="http://joeiddon.me/projects/arduino.html">visit here</a>. Alternatively, you can take a look at some software stuf. The
-main languages I code in are <a href="https://www.python.org/">Python</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a> and <a href="http://www.openscad.org/">OpenSCAD</a>. You can see my work with these by selecting the appropriate tab above.
+I've attempted a variety of different projects, physical and software, and only some of which I have written about here.
 </p>
+
+<p>
+My main coding languages are <a href="https://www.python.org/">Python</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a> and <a href="https://en.wikipedia.org/wiki/C_(programming_language)">C (++)</a>. In addition to these, I also know a little <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>. I also am quite proficient in <a href="http://www.openscad.org/">OpenSCAD</a> which is CAD software that allows you to describe 3d models through a C based language.
+</p>
+
+<p>
+For writing algorithms, solving problems, scientific computing, networking and generally any quick project, Python is always my go-to. The quick syntax and the interpreter that it offers makes it really easy to write code that is elegant, succinct and generally pythonic. However, as Python is highly terminal/console based, it is difficult to post my projects on this website and even if I explainied the code, it wouldn't be too interesting. For that reason I haven't written up any posts here, but you can see some of my work on my github and take a read through my stackoverflow answers if you are interested (at the time of writing I have answered nearly 400 questions which are nearly all Python related). There are links to these in the top right.
+</p>
+
+<p>
+On the other hand, projects written in JavaScript lend themselves to posts and explanations much more on this website. If you hover over the projects tab at the top, you will be able to selectJavaScript and see some of my Projects. Most of those posts (once you click through on the images) have links at the top which will take you to a place where you can view them. I won't go in to what I use JavaScript for here, but you can read this <a href="http://joeiddon.me/projects/javascript/about.html">about page</a> I wrote on them which explains why I love coding in it.
+</p>
+
+<p>
+Finally, my Arduino projects. As with the JavaScript ones, you can access these through the drop down in the site banner. Some of these projects are also interfaced with Python (as mentioned in their descriptions) so you can see another use of that language. In addition to my personal projects posted there, I also run a club at my school which you can see by navigating through the club link at the top.
+</p>   
 
 <img src="https://www.arduino.cc/en/uploads/Trademark/ArduinoCommunityLogo.png"></img>
 <img src="https://www.python.org/static/community_logos/python-logo-master-v3-TM.png"></img>
