--- a/projects/index.html
+++ b/projects/index.html
@@ -54,8 +54,8 @@ And to fill up some space, here's a cool spinning tetrahedron that I never bothe
 cnvs = document.getElementById("cnvs");
 ctx = cnvs.getContext("2d");
 
-cnvs.width = innerWidth;
-cnvs.height = innerHeight;
+cnvs.width = 1280;
+cnvs.height = 720;
 
 wireframe = false;
 pnts = [{x: -0.5, y: -0.5, z: -0.5}, {x: 0.5, y: 0.5, z: -0.5}, {x: -0.5, y: 0.5, z: 0.5}, {x: 0.5, y: -0.5, z: 0.5}];
