wrote maze game post

--- a/projects/javascript/3dMazeGame.html
+++ b/projects/javascript/3dMazeGame.html
@@ -2,10 +2,20 @@
 layout: default
 ---
 
-<h1>A 3d maze generation which you can walk around in my own 3d javascript engine</h1>
+<h1>A maze game in 3D</h1>
 
-<h2><a href="http://joeiddon.me/3dMazeGame/maze.html">have a look at it here (controls on first screen)</a></h2>
+<h2><a href="http://joeiddon.me/3dMazeGame/index.html">try and escape here</a></h2>
 
 <p>
-Description coming soon....
+After completing my 3D JavaScript Engine ([see source](https://github.com/RoadKillCat/3dSimulationVR/blob/master/thirdEngine.js)) and having just been experimenting with different maze generation algorithms ([see post](http://joeiddon.me/projects/javascript/mazeGeneration) I decided to make a simple 3D Maze Game.
 </p>
+
+<p>
+[The code](https://github.com/RoadKillCat/3dMazeGame/) still needs a bit more neatening up an shortening but is much better than my old verion (maze.js) which didn't use a library and had all the code muddled together.
+</p>
+
+<p>
+Apart from having a read of the code yourself, there isn't really much to say about this project. It is just a culmination of some of my recent work. It is worth noting that there are still some things I wish to improve - the most important being not being able to walk through walls. I think that with this aspect, the game could actually be quite enjoyable and complete. However, if you simply resist the temptation to walk through the walls, it is fun trying to escape.
+</p>
+
+<p>Link to play at top! Enjoy.</p>
