--- a/projects/javascript/3dMazeGame.html
+++ b/projects/javascript/3dMazeGame.html
@@ -7,11 +7,11 @@ layout: default
 <h2><a href="http://joeiddon.me/3dMazeGame/index.html">try and escape here</a></h2>
 
 <p>
-After completing my 3D JavaScript Engine ([see source](https://github.com/RoadKillCat/3dSimulationVR/blob/master/thirdEngine.js)) and having just been experimenting with different maze generation algorithms ([see post](http://joeiddon.me/projects/javascript/mazeGeneration) I decided to make a simple 3D Maze Game.
+After completing my 3D JavaScript Engine (<a href="https://github.com/RoadKillCat/3dSimulationVR/blob/master/thirdEngine.js">see source</a>) and having just been experimenting with different maze generation algorithms (<a href="http://joeiddon.me/projects/javascript/mazeGeneration">see my post</a>) I decided to make a simple 3D Maze Game.
 </p>
 
 <p>
-[The code](https://github.com/RoadKillCat/3dMazeGame/) still needs a bit more neatening up an shortening but is much better than my old verion (maze.js) which didn't use a library and had all the code muddled together.
+<a href="https://github.com/RoadKillCat/3dMazeGame/script.js">The code</a> still needs a bit more neatening up an shortening but is much better than <a href="https://github.com/RoadKillCat/3dMazeGame/maze.js">my old version</a> which didn't use a library and had all the code muddled together.
 </p>
 
 <p>
