--- a/projects/javascript/chase.html
+++ b/projects/javascript/chase.html
@@ -7,7 +7,7 @@ layout: default
 <h2><a href="http://joeiddon.me/Chase/chase.html">play here (instructions on first screen)</a></h2>
 
 <p>
-After getting a basic 3d engine working (see that post <a href="http://joeiddon.me/projects/javascript/simulating3d)">here</a>) I wanted to test it out with a little game. The idea was simple: each time you take a step, a "zombie" also takes a step directly towards you (but not the same length step as you). The aim is to simply try and walk past the pillars (where the zombie starts) without getting touched. It makes for quite a fun game (link at top).
+After getting a basic 3d engine working (see that post <a href="http://joeiddon.me/projects/javascript/simulating3d">here</a>) I wanted to test it out with a little game. The idea was simple: each time you take a step, a "zombie" also takes a step directly towards you (but not the same length step as you). The aim is to simply try and walk past the pillars (where the zombie starts) without getting touched. It makes for quite a fun game (link at top).
 </p>
 
 <p>
