--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -56,7 +56,7 @@ layout: default
   <tr>    
     <td>
       <a href="http://joeiddon.me/projects/javascript/3dMazeGame">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mazeGamePreview.JPG"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mazeGamePreview.png"></img>
       </a>
     </td>
     
