changed main size from 1280px to 1260px

--- a/club/snake.html
+++ b/club/snake.html
@@ -40,8 +40,8 @@ Next, we got the components together to build the final product - the main thing
 And here are some pictures of our work soldering it together:
 </p>
 
-<img src="http://joeiddon.me/images/matrix/chip.jpg"></img>
-<img src="http://joeiddon.me/images/matrix/capacitor.jpg"></img>
+<img class="half_img" src="http://joeiddon.me/images/matrix/chip.jpg"></img>
+<img class="half_img" src="http://joeiddon.me/images/matrix/capacitor.jpg"></img>
 
 <p>
 However, after soldering the different components onto the board, we realised that to make the project as small as possible, it would make sense to just use the larger matrix as this had enough space to mount everything on. So even though this was a valuable lesson on soldering, we ended up <b>not</b> using it!
@@ -55,8 +55,8 @@ Next, we made the controller board by soldering some push buttons to some copper
 And that was pretty much it! We uploaded the sketch to the Nano that we had already got working for the Mega (the code is compatible between board types in this case) and that was it. Here are some photos of the finished product, and finally a video of it in action.
 </p>
 
-<img src="http://joeiddon.me/images/finnishedSide.jpg"
-><img src="http://joeiddon.me/images/finnishedBottom.jpg"
-><img src="http://joeiddon.me/images/finnishedTop.jpg">
+<img class="third_img" src="http://joeiddon.me/images/finnishedSide.jpg"
+><img class="third_img" src="http://joeiddon.me/images/finnishedBottom.jpg"
+><img class="third_img" src="http://joeiddon.me/images/finnishedTop.jpg">
 
 <iframe width="1280" height="720" src="https://www.youtube.com/embed/ASf3uLuhJrI?mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
