--- a/projects/arduino/mg996rRobotArm.html
+++ b/projects/arduino/mg996rRobotArm.html
@@ -5,17 +5,18 @@ layout: default
 <h1>My second attempt at building a robot arm... </h1>
 
 <p>
-If you haven't seen my first arduino robot arm, then please checkout that project <a "href="http://joeiddon.me/projects/arduino/slideRobotArm">here</a>. The idea of that project was a test of what was possible using servos and an arduino. I wanted to see if I could build a strong, accurate and repeatable robot arm and I think I succeeded in doing so shown by that video. However, I spent no time planning or thinking through the design, I was just foccused on the one goal of picking and dropping stuff down a slide. This led to me building the frame out of some weak wood and having a bad bottom axel where the whole weight of the arm was resting on the flimsy plastic servo at the bottom.
+If you haven't seen my first arduino robot arm, then please checkout that project <a href="http://joeiddon.me/projects/arduino/slideRobotArm">here</a>. The idea of that project was a test of what was possible using servos and an arduino. I wanted to see if I could build a strong, accurate and repeatable robot arm and I think I succeeded in doing so shown by that video. However, I spent no time planning or thinking through the design, I was just foccused on the one goal of picking and dropping stuff down a slide. This led to me building the frame out of some weak wood and having a bad bottom axel where the whole weight of the arm was resting on the flimsy plastic servo at the bottom.
 </p>
   
 <p> 
 After finnishing it, I realised that the project had potential but to do anything more substantial/ useful, I needed to spend more time on its design and use different motors. I researched in-depth the different ways robot arms could be configured involving things like their degress of freedom, max torque and there working area. If you are interested, checkout <a href="http://www.societyofrobots.com/robot_arm_tutorial.shtml">this introduction</a>. Anyway, I settled on bulding an articulated robot arm which allowed for the most versatility and degrees of freedom.
 </p>
+
 <p>
 To see what a small industrial articulated robot arm can do and their level of precision, checkout this:
 </p>
   
-<iframe width="1260" height="720" src="https://youtube.com/embed/Gx5be7_J2xc?start=68&mute=1&rel=0&modestbranding=1&showinfo=0&color=white" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://youtube.com/embed/Gx5be7_J2xc?start=68&mute=1&rel=0&modestbranding=1&showinfo=0&color=white"></iframe>
   
 <p>
 Anyway, after wasting some time watching these things on youtube, I realised that one of the key design points was the motors used. As before, I had decided to use servos but the small TowerPro mg90s weren't going to cut it as they have plastic gears and hardly any torque. So I came across this website called <a href="https://servodatabase.com/">the servo database</a> where you can sort a huge variety of servos based on torque, weight etc. Eventually, I decided that I would use the mg996r servos. They have 9.6kg/cm torque and are metal geared so they would be perfect for my application. So knowing that they would take a while to arrive, I ordered 4 for £13 off ebay. In the meantime, I began the design of the arm...
