updated club homepage

--- a/club/index.html
+++ b/club/index.html
@@ -2,25 +2,21 @@
 layout: default
 ---
 
-<style>
-img {
-  width: 33.3333333%;
-  display: inline-block;
-}
-</style>
- 
+<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
 
 <h1>Arduino Club</h1>
 
 <p>
-The "/club" sector of this website will be used to log the progress of the "Arduino Club" which I was granted some money to run. If you aren't sure what an Arduino is, take a look out this <a href="http://joeiddon.me/projects/arduino/about">about page</a> I wrote to explain what they are.
+At the end of the 2017 Summer Term, I was granted some money to start a club revolving around <a href="http://joeiddon.me/projects/arduino/about">Arduinos</a>. We currently meet on Wednesday and Friday lunchtimes and work on projects together.
 </p>
 
 <p>
-To keep track of what we spend the money on, <a href="http://joeiddon.me/club/log">This page</a> will be used to track our expenditures.
+To keep track of what we spend the money on, <a href="http://joeiddon.me/club/log">this page</a> contains a table of things we've bought.
 </p>
 
-<link rel="stylesheet" href="http://joeiddon.me/projects/project.css">
+<p>
+The images below are linked to their corresponding projects so feel free to take a look at what we have been up to.
+</p>
 
 <table>
   <tr>
