--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<h1>Welcome to my [work in progress] website...</h1>
+<h1>Welcome to my website</h1>
 
 <p>
-Hello and welcome to my site, here I will be posting my projects and stuf to find out about me, hit the about tab above. To see my projects, chekcout that tab.
+Hello, here I will be posting my projects and other things. To see my projects, use the drop-down menu under the "Projects" tab at the top.
 </p>
 
 <p>
