--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -36,5 +36,18 @@ layout: default
       </a>
     </td>
   </tr>
+  
+  <tr>
+    <td>
+      <a href="http://joeiddon.me/projects/arduino/laser">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mirror.jpg"></img>
+      </a>
+    </td>
+    <!--<td>
+      <a href="http://joeiddon.me/projects/arduino/bitcoin">
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/bitcoin_side.jpeg"></img>
+      </a>
+    </td>-->
+  </tr>
 
 </table>
