--- a/projects/arduino/index.html
+++ b/projects/arduino/index.html
@@ -40,7 +40,7 @@ layout: default
   <tr>
     <td>
       <a href="http://joeiddon.me/projects/arduino/laser">
-      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mirror.jpg"></img>
+      <img class="project_img" src="https://raw.githubusercontent.com/RoadKillCat/roadkillcat.github.io/master/images/mirrorLASER.jpg"></img>
       </a>
     </td>
     <!--<td>
