--- a/projects/arduino/laser.html
+++ b/projects/arduino/laser.html
@@ -6,13 +6,13 @@ layout: default
 
 <p>Most Arduino boards have analog pins which accurately sense 0-5V. A light dependent resistor (LDR) changes its resistance in iresponse to light. However, since the analog pins only measure voltage (and not resistance), a potential divider circuit is needed: (source wikipedia)</p>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Resistive_divider2.svg/137px-Resistive_divider2.svg.png"></img>
+<img class="small_img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Resistive_divider2.svg/137px-Resistive_divider2.svg.png"></img>
 
 <p>Once I could then get an accurate reading of the lots of things became possible. One useful thing being to couple this sensor with a LASER. I soldered together a little device that joined these two components together. This would allow me to test it in different applications.</p>
 
-<img class="half_img" src="/images/LDR.jpg">
-<img class="half_img" src="/images/LASER.jpg">
-<img class="half_img" src="/images/laserbeam.jpg">
+<img class="half_img" src="/images/LDR.jpg"
+><img class="half_img" src="/images/LASER.jpg"
+><img class="half_img" src="/images/laserbeam.jpg">
 
 <p>From here, the main application I had in mind was making some kind of light gate. This would involve bouncing the light off a mirror and back at the LDR. Then, if the laserbeam is broken, the Arduino could carry out some task (for testing purposes I just lit the on-board LED (pin 13)) when the beam was active.</p>
 
