--- a/projects/javascript/simulating3d.html
+++ b/projects/javascript/simulating3d.html
@@ -146,5 +146,5 @@ It is clear that in less than 45 lines of code, a decent simulation can be creat
 </p>
 
 <p>
-I also made some cool demonstration things which are too small to have a full post. Namely, this <a href="joeiddon.me/3dSimulationVR/tetrahedron">tetrahedron</a> and this <a href="http://joeiddon.me/3dSimulationVR/ball.html">spinning ball</a>. Both are not interactive, but the spinning ball does acquire color after ~8s.
+I also made some cool demonstration things which are too small to have a full post. Namely, this <a href="http://joeiddon.me/3dSimulationVR/tetrahedron">tetrahedron</a> and this <a href="http://joeiddon.me/3dSimulationVR/ball.html">spinning ball</a>. Both are not interactive, but the spinning ball does acquire color after ~8s.
 </p>
