purge link to the old ball

--- a/projects/javascript/simulating3d.html
+++ b/projects/javascript/simulating3d.html
@@ -145,6 +145,4 @@ document.addEventListener("keydown", function (e){
 It is clear that in less than 45 lines of code, a decent simulation can be created. However, there are lots of more things that need adding such as: more complex objects with multiple objects, face ordering, camera direction... I will not explain how I did that, but in <a href="http://joeiddon.me/3dSimulationVR/3dv3.html">this demonstration</a> you can see it working quite well (some issues). The controls are WASD for movement, ZX for flying up and down and EQ for looking left and right. From here, I improved it a bit more then created some simple applications which you can browse <a href="http://joeiddon.me/projects/javascript">here</a>.
 </p>
 
-<p>
-I also made some cool demonstration things which are too small to have a full post. Namely, this <a href="http://joeiddon.me/3dSimulationVR/tetrahedron">tetrahedron</a> and this <a href="http://joeiddon.me/3dSimulationVR/ball.html">spinning ball</a>. Both are not interactive, but the spinning ball does acquire color after ~8s.
-</p>
+<p>From here, I added all those extra features I talked of and neatened the code up into a neat js library, available <a href="http://github.com/RoadKillCat/3dSimulationVR">here</a>.</p>
