changed links to zengine, rather than thirdEngine

--- a/projects/javascript/ball.html
+++ b/projects/javascript/ball.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>An Interactive Rotating Ball</h1>
 
-<h2><a href="/3dSimulationVR/ball">Check it out here</a></h2>
+<h2><a href="/zengine/demos/ball">Check it out here</a></h2>
 
 <p>After finishing my 3d engine to a reasnoble level, I thought I'd make a neat demonstration of its functionality.</p>
 
@@ -26,6 +26,6 @@ function circleCoord(yaw, pitch){
 }
 </pre>
 
-<p>Apart from the above function, the rest of the code is pretty simple and boring so I won't bother going into depth here. However, as always, feel free to checkout <a href="https://github.com/RoadKillCat/3dSimulationVR/blob/master/ball.html">the source</a> on github.</p>
+<p>Apart from the above function, the rest of the code is pretty simple and boring so I won't bother going into depth here. However, as always, feel free to checkout <a href="https://github.com/RoadKillCat/zengine/blob/master/demos/ball.html">the source</a> on github.</p>
 
 <p>And that's it, there wasn't too much to this project, but it created a cool outcome, link at top!</p>
